--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -721,7 +721,7 @@ and install these.
 the instructions below (on Security Enhanced Linux please use the RPM or please read the README before installation).</FONT></FONT></P>
 <UL>
 	<LI><P><FONT >Make sure you
-	have java version 1.4.2 or higher, gcc 3.2 or higher, apache 1.3 or
+	have java version 1.4.2 or higher, gcc 3.3.3 or higher, apache 1.3 or
 	higher, <em>GNU autoconf </em> 2.57 or higher, <em>GNU libtool</em> 1.4.3 or higher, <em>GNU automake</em> 1.6.3 or higher, GNU make and php 4.3.4 or higher
 	installed. You can check the version numbers with the commands <code>java
 	-version</code>, <code>gcc --version</code>, <code>apachectl -version</code>, <code>libtool --version</code>, <code>automake --version</code>, <code>make null --version</code>, <code>autoconf --version</code> and
@@ -731,7 +731,7 @@ the instructions below (on Security Enhanced Linux please use the RPM or please 
 	the source code of the bridge from
 	</FONT><A HREF="http://www.sourceforge.net/projects/php-java-bridge"><FONT >http://www.sourceforge.net/projects/php-java-bridge</FONT></A></FONT></P>
 	<LI><P><FONT >Extract the file
-	with the command: <code>cat php-java-bridge_v.x.y.tar.bz2 | bunzip2 |
+	with the command: <code>cat php-java-bridge_v.x.y.tar.gz | gunzip |
 	tar xf -</code></FONT></P>
 	<LI><P STYLE="font-style: normal"><FONT >In
 	the directory php-java-bridge-v.x.y build the module: 
