--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,7 @@ This file contains answers to frequently asked questions. Please see <a href="ht
 <p>No. The bridge and the VM can run as a sub component of IIS or Apache. The C based extension automatically starts a VM in the <code>minit()</code> and terminates it in the <code>mshutdown()</code> hook. The request-handling threads attach themselfs to the persistent VM using the PHP/Java Bridge protocol.
 <p>
 <H4>What's the advantage/disadvantage of the pure PHP implementation?</H4>
-<p>Both implementations support the same features. But since PHP doesn't contain a "just in time compiler", the C based extension module is 2 to 10 times faster than the the pure PHP implementation (depending on whether a PHP opcode cache is used).
+<p>Both implementations support the same features. But since PHP doesn't contain a "just in time compiler", the C based extension module is 2 to 10 times faster than the pure PHP implementation (depending on whether a PHP opcode cache is used).
 </p>
 <p>The pure PHP implementation needs an external Java process. It can be started with <code>java -jar JavaBridge.jar SERVLET:8080</code>, but it is recommended to start the external Java VM via a J2EE server or servlet engine. The tomcat servlet engine can be used to start Java as a system service on Windows and Linux.
 </p>
@@ -56,12 +56,12 @@ returns null and all other java procedures cannot be used anymore.
 <code>X_JAVABRIDGE_OVERRIDE_HOSTS</code> and
 <code>X_JAVABRIDGE_OVERRIDE_HOSTS_REDIRECT</code>.
 </p>
-<p>To direct a php script to a web context FOO running on computer
+<p>To direct a php <em>script</em> to a web context FOO running on computer
 192.168.4.98, port 8080, use the following code: 
 
 <blockquote> <code> &nbsp;&nbsp;&lt?php<br>
 &nbsp;&nbsp;$_SERVER['X_JAVABRIDGE_OVERRIDE_HOSTS_REDIRECT']="h:192.168.4.98:8080//FOO/JavaBridge.phpjavabridge";<br>
-&nbsp;&nbsp;if(!extension_loaded('java') require_once("http://localhost:8080/JavaBridge/java/Java.inc");<br>
+&nbsp;&nbsp;if(!extension_loaded('java')) require_once("http://localhost:8080/JavaBridge/java/Java.inc");<br>
 &nbsp;&nbsp;echo java_server_name();<br>
 &nbsp;&nbsp;?&gt; </code> </blockquote>
 
@@ -77,7 +77,7 @@ context and uses the request context instead, or it connects to a
 standalone socket listener directly (if the option is Off).
 </p>
 <p>
-To direct a php instance to a to a web context FOO running on computer
+To direct a php <em>instance</em> to a web context FOO running on computer
 192.168.4.98, port 8080, use the variable
 <code>X_JAVABRIDGE_OVERRIDE_HOSTS</code> instead. This variable must
 be set before the PHP instance starts.
@@ -753,8 +753,8 @@ BORDER="1"
 <p>
 </p>
 
-<H4>How fast is the pure PHP/Java implementation compared to the C based implementation or JSP?</H4>
-<p>On modern operating systems (Windows, Solaris and Linux), the pure PHP implementation is only 2-3 times slower than either the C based implementation or compiled JSP (=Java servlets).<p>
+<H4>How fast is the pure PHP/Java implementation compared with the C based implementation or JSP?</H4>
+<p>On modern operating systems (Windows, Solaris and Linux) and PHP >= 5.1.4 with an opcode cache enabled, the pure PHP implementation is only 2-3 times slower than either the C based implementation or compiled JSP (=Java servlets).<p>
 <p>
 The following table displays the result of the command:
 <blockquote>
@@ -772,9 +772,9 @@ BORDER="1"
 ><TH
 >OS</TH
 ><TH
->PHP (tcp sockets + tcp sockets)</TH
+>PHP (tcp sockets)</TH
 ><TH
->PHP (named pipes + tcp sockets)</TH
+>PHP (named pipes)</TH
 ><TH
 >JSP</TH
 ></TR
